--- a/35. 搜索插入位置.md
+++ b/35. 搜索插入位置.md
@@ -47,3 +47,27 @@ public:
     }
 };
 ```
+
+Solution 2：  
+这题最正统的做法还是二分法，面试时用上面的解法，肯定不能让面试官满意···
+
+```cpp
+class Solution {
+public:
+    int searchInsert(vector<int>& nums, int target) 
+    {
+        int len = nums.size();
+        if(nums.back() < target) return len;
+        int left = 0, right = len;
+        while(left < right)
+        {
+            int mid = left + (right - left) / 2;
+            if(nums[mid] >= target)
+                right = mid;
+            else 
+                left = mid + 1;
+        }
+        return right;
+    }
+};
+```
