--- a/110. 平衡二叉树.md
+++ b/110. 平衡二叉树.md
@@ -36,7 +36,24 @@ notebook: a - 001 | ITabc
 ```
 
 ---
+Solution 1:自顶向下
+二叉树问题，十之八九递归可以解决。设计一个获取树深度的函数。左右子树分别递归调用，如果左右子树高度差不满足说明不是平衡二叉树，只有左右子树都满足才是平衡二叉树。
+```cpp
+class Solution {
+public:
+    bool isBalanced(TreeNode *root) {
+        if (!root) return true;
+        if (abs(getDepth(root->left) - getDepth(root->right)) > 1) return false;
+        return isBalanced(root->left) && isBalanced(root->right);    
+    }
+    int getDepth(TreeNode *root) {
+        if (!root) return 0;
+        return 1 + max(getDepth(root->left), getDepth(root->right));
+    }
+};
+```
 
+Solution 2: 自底向上
 ```cpp
 /**
  * Definition for a binary tree node.
