--- a/529. 扫雷游戏.md
+++ b/529. 扫雷游戏.md
@@ -98,7 +98,8 @@ public:
             if (cnt > 0)
             {
                 board[row][col] = cnt + '0';
-            } else 
+            }
+            else 
             {
                 //当前点击位置没有雷，标记为B
                 board[row][col] = 'B';
