--- a/34. 在排序数组中查找元素的第一个和最后一个位置.md
+++ b/34. 在排序数组中查找元素的第一个和最后一个位置.md
@@ -11,13 +11,15 @@ notebook: a - 001 | ITabc
 如果数组中不存在目标值，返回 [-1, -1]。
 
 示例 1:
-
+```
 输入: nums = [5,7,7,8,8,10], target = 8
 输出: [3,4]
+```
 示例 2:
-
+```
 输入: nums = [5,7,7,8,8,10], target = 6
 输出: [-1,-1]
+```
 
 ---
 
@@ -32,11 +34,13 @@ public:
         int r = idx;
         if(l == -1)
             return {-1, -1};
+        //向左扩散寻找，排除重复的数，直到边界
         while(l > 0 && nums[l-1] == nums[idx])
         {
             l--;
         }
-        while(r < nums.size()-1 && nums[r+1] == nums[idx])
+        //向右扩散寻找，排除重复的数，直到边界
+        while(r < nums.size() - 1 && nums[r+1] == nums[idx])
         {
             r++;
         }
