更新并查集解法

--- a/130. 被围绕的区域.md
+++ b/130. 被围绕的区域.md
@@ -1,6 +1,6 @@
 ---
 title: 130. 被围绕的区域
-tags: LeetCode,深度优先搜索
+tags: LeetCode,深度优先搜索,并查集
 notebook: a - 001 | ITabc
 ---
 
@@ -21,8 +21,8 @@ X X X X
 X X X X
 X O X X
 解释:
-
-被围绕的区间不会存在于边界上，换句话说，任何边界上的 'O' 都不会被填充为 'X'。 任何不在边界上，或不与边界上的 'O' 相连的 'O' 最终都会被填充为 'X'。如果两个元素在水平或垂直方向相邻，则称它们是“相连”的。
+被围绕的区间不会存在于边界上，换句话说，任何边界上的 'O' 都不会被填充为 'X'。 
+任何不在边界上，或不与边界上的 'O' 相连的 'O' 最终都会被填充为 'X'。如果两个元素在水平或垂直方向相邻，则称它们是“相连”的。
 ```
 
 ---
@@ -72,4 +72,169 @@ public:
     }
 };
  
+```
+
+Solution 2:并查集
+
+```cpp
+class UnionFind
+{
+public:
+	UnionFind();
+	UnionFind(size_t n);
+	void Union(size_t p, size_t q);
+	size_t Find(size_t x);
+	bool IsConnect(size_t p, size_t q);
+	~UnionFind();
+
+private:
+	//连通分量的个数
+	size_t n_connected;
+	//树的大小
+	std::vector<size_t> siz;
+	//并查集森林，存储所有的数
+	std::vector<size_t> parent;
+
+};
+
+UnionFind::UnionFind()
+{
+}
+
+UnionFind::UnionFind(size_t n)
+{
+	this->n_connected = n;
+	parent = std::vector<size_t>(n);
+    siz = std::vector<size_t>(n);
+	for (size_t i = 0; i < n; ++i)
+	{
+		parent[i] = i;
+		siz[i] = 1;
+	}
+}
+
+/*!
+*@brief  将两棵树连接，也就是将两个不连通分量联通
+*@param[out]
+*@param[in]  int p
+*@param[in]  int q
+*@return     void
+*/
+void UnionFind::Union(size_t p, size_t q)
+{
+	size_t root_p = Find(p);
+	size_t root_q = Find(q);
+	if (root_p == root_q)
+		return;
+	//将较小的树连接到较大的树下,并将树的大小修改
+	if (siz[root_p] < siz[root_q])
+	{
+		parent[root_p] = root_q;
+		siz[root_q] += siz[root_p];
+	}
+	else
+	{
+		parent[root_q] = parent[root_p];
+		siz[root_p] += siz[root_q];
+	}
+    n_connected--;
+}
+
+/*!
+*@brief  返回结点x的根节点
+*@param[out]
+*@param[in]  int x
+*@return     size_t
+*/
+size_t UnionFind::Find(size_t x)
+{
+	while (parent[x] != x)
+	{
+		parent[x] = parent[parent[x]];
+		x = parent[x];
+	}
+	return x;
+}
+
+/*!
+*@brief    判断两个分量（树）是否连通
+*@param[out]
+*@param[in]  size_t p
+*@param[in]  size_t q
+*@return     bool
+*/
+bool UnionFind::IsConnect(size_t p, size_t q)
+{
+	return Find(p) == Find(q);
+}
+
+UnionFind::~UnionFind()
+{
+}
+
+class Solution
+{
+public:
+	void solve(vector<vector<char>>& board)
+	{
+		size_t m = board.size();
+		if (m == 0)
+			return;
+		size_t n = board[0].size();
+		//为根节点dummy留一个位置
+		UnionFind uf(m * n + 1);
+		size_t dummy = m * n;
+		//将第一列和最后一列中的O与dummy连通
+		for (size_t i = 0; i < m; ++i)
+		{
+			if (board[i][0] == 'O')
+			{
+				uf.Union(dummy, i * n);
+			}
+			if (board[i][n - 1] == 'O')
+			{
+				uf.Union(dummy, i * n + n - 1);
+			}
+		}
+		//将第一行和最后一行的O与dummy连通
+		for (size_t j = 0; j < n; ++j)
+		{
+			if (board[0][j] == 'O')
+			{
+				uf.Union(dummy, j);
+			}
+			if (board[m - 1][j] == 'O')
+			{
+				uf.Union(dummy, n * (m - 1) + j);
+			}
+		}
+		vector<vector<int>> direct = { {1,0}, {0,1}, {0,-1}, {-1,0} };
+		for (size_t i = 1; i < m - 1; ++i)
+		{
+			for (size_t j = 1; j < n - 1; ++j)
+			{
+				if (board[i][j] == 'O')
+				{
+					// 将此 O 与上下左右的 O 连通
+					for (size_t k = 0; k < 4; ++k)
+					{
+						int x = i + direct[k][0];
+						int y = j + direct[k][1];
+						if (board[x][y] == 'O')
+							uf.Union(x * n + y, i * n + j);
+					}
+				}
+			}
+		}
+		// 所有不和 dummy 连通的 O，都要被替换
+		for (size_t i = 1; i < m - 1; ++i)
+		{
+			for (size_t j = 1; j < n - 1; ++j)
+			{
+				if (!uf.IsConnect(dummy, i * n + j))
+					board[i][j] = 'X';
+			}
+		}
+	}
+};
 ```
