--- a/214. 最短回文串.md
+++ b/214. 最短回文串.md
@@ -32,3 +32,10 @@ public:
   }
 };
 ```
+
+```cpp
+int compare (const string& str) const noexcept;
+int compare (size_t pos, size_t len, const string& str) const;
+int compare (size_t pos, size_t len, const string& str,
+             size_t subpos, size_t sublen = npos) const;
+```
