--- a/37. 解数独.md
+++ b/37. 解数独.md
@@ -15,6 +15,7 @@ notebook: a - 001 | ITabc
 ```
 
 ![](http://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Sudoku-by-L2G-20050714.svg/250px-Sudoku-by-L2G-20050714.svg.png)
+
 ![](http://upload.wikimedia.org/wikipedia/commons/thumb/3/31/Sudoku-by-L2G-20050714_solution.svg/250px-Sudoku-by-L2G-20050714_solution.svg.png)
 
 ---
@@ -73,6 +74,7 @@ private:
                 rows[x][i] = 1;
                 cols[y][i] = 1;
                 box[box_key][i] = 1;
+                //转成字符形式
                 board[x][y] = i + '0';
                 //递归
                 if(Solver(board, nx, ny))
