--- a/404. 左叶子之和.md
+++ b/404. 左叶子之和.md
@@ -56,3 +56,40 @@ public:
     }
 };
 ```
+Solution 2:迭代
+
+```cpp
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    int sumOfLeftLeaves(TreeNode* root) 
+    {
+        if(!root)
+            return 0;
+        int sum = 0;
+        queue<TreeNode*> que;
+        que.push(root);
+        while(!que.empty())
+        {
+            TreeNode* t = que.front();
+            que.pop();
+            //是左节点，并且是叶子结点
+            if(t->left && !t->left->left && !t->left->right)
+                sum += t->left->val;
+            if(t->left)
+                que.push(t->left);
+            if(t->right)
+                que.push(t->right);
+        }
+        return sum;
+    }
+};
+```
