--- a/765. 情侣牵手.md
+++ b/765. 情侣牵手.md
@@ -29,14 +29,14 @@ len(row) 是偶数且数值在 [4, 60]范围内。
 ---
 Solution 1：并查集
 又是一道并查集，并查集的题的特点就是只要能想到合适的转换就会异常简单，但是如何转换成并查集这就得多练习了，显然我练习的还不够。诶
-并查集解决图的连通问题，能方便的判断两点是否连通。在这道题里将一对情侣分成一个组，将`N`个人分成`(N/2)`组，每个人的编号除以2就是他们对应的组号，比如编号`2`和`3`得到的组号都是`1`，说明他们是一对情侣，这是符合题意的。
+并查集解决图的连通问题，能方便的判断两点是否连通。在这道题里将一对情侣分成一个组，将`N`个人分成`(N/2)`组，每个人的编号除以2就是他们对应的组号，比如编号`2`和`3`得到的组号都是`1`，说明他们是一对情侣，这是符合题意的。那我们就遍历整个`row`数组，判断相邻两人是否属于同一个组，如果不属于同一个组，将其强行配成一对，然后cnt自增，意思就是需要交换一次座位。遍历完整个数组，就能知道总共变化了几次。
 ```cpp
 class Solution {
 public:
     int minSwapsCouples(vector<int>& row) 
     {
         int n = row.size();
-        int cnt = n / 2;
+        int cnt = 0;
         vector<int> root(n);
         for(int i = 0; i < n; ++i)
             root[i] = i;
@@ -47,10 +47,10 @@ public:
             if(x != y)
             {
                 root[x] = y;
-                cnt--;
+                cnt++;
             }
         }
-        return n / 2 - cnt;
+        return cnt;
     }
     int find(int i, vector<int>& root)
     {
