--- a/1195. 交替打印字符串.md
+++ b/1195. 交替打印字符串.md
@@ -29,7 +29,7 @@ class FizzBuzz {
 线程D将调用 `number()` 来实现输出既不能被` 3 `整除也不能被` 5 `整除的数字。
 
 ---
-
+Solution 1：互斥锁
 ```cpp
 #include <mutex>
 class FizzBuzz 
