--- a/350. 两个数组的交集 II.md
+++ b/350. 两个数组的交集 II.md
@@ -75,3 +75,25 @@ public:
 };
 
 ```
+
+Solution 3:
+```cpp
+class Solution {
+public:
+    vector<int> intersect(vector<int>& nums1, vector<int>& nums2) 
+    {
+        unordered_map<int, int> mp;
+        vector<int> res;
+        for(const auto& num : nums1)
+        {
+            mp[num]++;
+        }
+        for(const auto& num : nums2)
+        {
+            if(mp[num]-- > 0)
+                res.push_back(num);
+        }
+        return res;
+    }
+};
+```
